Fixed Header Gap with top of the page

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,9 @@
+html,
 body {
-	margin: 0;
+  margin: 0;
+  padding: 0;
 }
+
 .center {
   text-align: center;
 }
@@ -20,12 +23,15 @@ li {
 }
 
 #quote p {
-	text-align: center;
-	font-size: 80px;
-	font-style: italic;
+  text-align: center;
+  font-size: 80px;
+  font-style: italic;
 }
 
 header {
-	background-color: #023047;
-	color: white;
+  margin: 0;
+  padding: 0;
+  background-color: #023047;
+  color: white;
+  overflow: auto;
 }
